<resources>
    <string name="app_name">Effigy</string>
    <string name="content_text">Bunga matahari (Helianthus annuus L.) adalah tumbuhan semusim dari suku kenikir-kenikiran (Asteraceae) yang populer, baik sebagai tanaman hias maupun tanaman penghasil minyak. Bunga tumbuhan ini sangat khas: besar, biasanya berwarna kuning terang, dengan kepala bunga yang besar (diameter bisa mencapai 30 cm).</string>
    <string name="specification">Karakteristik</string>
    <string name="display">Bunga matahari merupakan tumbuhan terna semusim yang berasal dari Amerika Tropik bagian utara (Meksiko), tinggi 3m sampai 5m tergantung varietasnya. Daun tunggal lebar. Batang biasanya ditumbuhi rambut kasar, tegak, jarang bercabang.</string>
    <string name="dummy_value">Bunga matahari (Helianthus annuus L.)</string>
    <string name="dummy_photos">photos</string>
    <string name="pengertian">Pengertian</string>
    <string name="sumber">Sumber :</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="like">like</string>
    <string name="pengertian_sakura">Pohon sakura adalah salah satu pohon yang tergolong dalam familia Rosaceae, genus Prunus sejenis dengan pohon prem, persik, atau aprikot, tetapi secara umum sakura digolongkan dalam subgenus sakura. Asal usul kata "sakura" adalah kata "saku" (bahasa Jepang untuk "mekar") ditambah akhiran yang menyatakan bentuk jamak "ra". Dalam bahasa Inggris, bunga sakura disebut cherry blossoms.</string>
    <string name="karakteristik_sakura">Ciri khas sakura jenis someiyoshino adalah bunganya yang lebih dahulu mekar sebelum daun-daunnya mulai keluar. Puluhan, ratusan, bahkan ribuan batang pohon yang berada di lokasi yang sama, bunganya mulai mekar secara serentak dan rontok satu per satu pada saat yang hampir bersamaan.</string>
    <string name="seruni_krisantemum">Seruni Krisantemum</string>
    <string name="pengertian_krisan">Seruni atau krisantemum (kadang disebut sebagai krisan atau serunai) adalah sejenis tumbuhan berbunga yang sering ditanam sebagai tanaman hias pekarangan atau bunga petik. Tumbuhan berbunga ini mulai muncul pada zaman Kapur.</string>
    <string name="karakteristik_bunga_krisan">Akar bunga krisan adalah akar serabut. Perakaran ini biasanya dapat tumbuh dan masuk hingga kedalaman 30-40 cm dari permukaan tanah menyebar ke semua arah.Batang tanaman krisan memiliki tekstur lunak, tumbuh tegak, dan berwarna hijaum dengan bentuk membulat dan permukaannya kasar. Batang dari bunga ini juga dapat mengeras atau berkayu dengan warna hijau kecoklatan jika ia dibiarkan tumbuh terus.Ciri khas bunga krisan sebetulnya dapat lihat dari bentuk daunnya. Seperti bisa dilihat pada gambar, daun bunga krisan memiliki bagian tepi yang bergerigi dan bercelah dengan tulang daun menyirip. Daun ini tersusun berselang-seling pada batang dan cabangnya. Ia tumbuh dengan bentuk lonjong, dilengkapi pangkal yang membulat dan ujung yang meruncing. Panjang daunnya ini berkisar antara 7 hingga 13 cm dengan lebar berkisar 3 hingga 6 cm.Kelopak Bunga krisan akan tumbuh pada ujung batang dan tersusun rapi di tangkai berukuran pendek sampai panjang. Jenis bunga krisan dikategorikan menjadi dua jenis yaitu krisan jenis spray dan krisan jenis standar. Untuk bunga krisan jenis spray, biasanya dalam satu tangkai bunga ada 10 sampai 20 kuntum bunga yang ukurannya kecil. Sedangkan bunga Krisan jenis standar, di dalam satu tangkainya biasanya hanya terdapat satu kuntum bunga yang ukurannya besar. Kelopak bunga krisan berbentuk cawan dengan ujung runcing dan memiliki garis tengah pada kelopak 3-5 cm. Panjang bunganya berkisar 3-8 mm.Buah bunga krisan berbentuk lonjong, ukurannya kecil, dan ditutupi oleh selaput buah. Buahnya jika masih muda berwarna putih dan setelah tua akan berubah menjadi hitam. Buah krisan merupakan hasil penyerbukan dari bunga sehingga di dalamnya akan berisi banyak sekali biji. Adapun bijinya ini berukuran sangat kecil dengan bentuk lonjong.</string>
    <string name="mawar">Mawar</string>
    <string name="pengertian_mawar">Mawar adalah suatu jenis tanaman semak dari genus Rosa sekaligus nama bunga yang dihasilkan tanaman ini. Mawar liar terdiri dari 100 spesies lebih, kebanyakan tumbuh di belahan bumi utara yang berudara sejuk.</string>
    <string name="karakteristik_bunga_mawar">Spesies mawar umumnya merupakan tanaman semak yang berduri atau tanaman memanjat yang tingginya bisa mencapai 2 sampai 5 meter. Walaupun jarang ditemui, tinggi tanaman mawar yang merambat di tanaman lain bisa mencapai 20 meter. Sebagian besar spesies mempunyai daun yang panjangnya antara 5–15 cm dengan dua-dua berlawanan (pinnate). Daun majemuk yang tiap tangkai daun terdiri dari paling sedikit 3 atau 5 hingga 9 atau 13 anak daun dan daun penumpu (stipula) berbentuk lonjong, pertulangan menyirip, tepi tepi beringgit, meruncing pada ujung daun dan berduri pada batang yang dekat ke tanah. Mawar sebetulnya bukan tanaman tropis, sebagian besar spesies merontokkan seluruh daunnya dan hanya beberapa spesies yang ada di Asia Tenggara yang selalu berdaun hijau sepanjang tahun. Bunganya terdiri dari 5 helai daun mahkota dengan perkecualian Rosa sericea yang hanya memiliki 4 helai daun mahkota. Di antara warna yang dimiliki oleh mawar adalah putih, merah muda, kuning dan biru pada beberapa spesies. Ovari berada di bagian bawah daun mahkota dan daun kelopak.</string>
    <string name="melati">Melati</string>
    <string name="pengertian_melati">Melati merupakan tanaman bunga hias berupa perdu berbatang tegak yang hidup menahun. Melati merupakan genus dari semak dan tanaman merambat dalam keluarga zaitun (Oleaceae). Terdiri dari sekitar 200 spesies tumbuhan asli daerah beriklim tropis dan hangat dari Eurasia, Australasia dan Oseania, melati secara luas dibudidayakan untuk aroma khas bunganya yang harum.</string>
    <string name="karakteristik_melati">Bunga melati termasuk bunga majemuk. Bunganya tumbuh di ketiak daun, terbatas dengan jumlah 3 bunga atau sebuah tandan padat dengan banyak bunga. Setiap bunga memiliki antara empat dan sembilan kelopak, empat ovula dan dua lokulus. Bunga melati memiliki dua benang sari yang mengacungkan filamen yang sangat pendek. Bunga-bunga biasanya berukuran 2,5 cm dan dengan warna putih lilin. Mahkota bunganya berbentuk lembaran mengerut, seperti terompet, yang berwarna putih, dan berbau wangi. Beberapa varietas melati berbunga ganda dikenal tidak menghasilkan buah. Bunga melati dikenal dengan aromanya yang semerbak dan menenangkan.</string>
    <string name="anggrek">Bunga Anggrek (Orchidaceae)</string>
    <string name="pengertian_bunga_anggrek">Suku anggrek-anggrekan (bahasa Latin: Orchidaceae) merupakan satu suku tumbuhan berbunga dengan anggota jenis terbanyak. Jenis-jenisnya tersebar luas dari daerah tropika basah hingga wilayah sirkumpolar, meskipun sebagian besar anggotanya ditemukan di daerah tropika. Kebanyakan anggota suku ini hidup sebagai epifit, terutama yang berasal dari daerah tropika. Anggrek di daerah beriklim sedang biasanya hidup di tanah dan membentuk umbi sebagai cara beradaptasi terhadap musim dingin. Organ-organnya yang cenderung tebal dan "berdaging" (sukulen) membuatnya tahan menghadapi tekanan ketersediaan air. Anggrek epifit dapat hidup dari embun dan udara lembap. Orchidaceae adalah sumber inspirasi dari nama kereta api Argo Anggrek, kereta api eksekutif yang melayani Surabaya Pasar Turi-Gambir.</string>
    <string name="karakteristik_anggrek">Akar serabut, tidak dalam. Jenis-jenis epifit yaitu mengembangkan akar sukulen dan melekat pada batang pohon tempatnya tumbuh,namun tidak merugikan pohon inang. Ada pula yang tumbuh geofitis,dengan istilah lain terrestria artinya tumbuh di tanah dengan akar-akar di dalam tanah.
    Batang anggrek beruas-ruas. Anggrek yang hidup di tanah ("anggrek tanah") batangnya pendek dan cenderung menyerupai umbi. Sementara itu, anggrek epifit batangnya tumbuh baik, sering kali menebal dan terlindungi lapisan lilin untuk mencegah penguapan berlebihan. Pertumbuhan batang dapat bersifat memanjang / meninggi (monopodial) atau melebar / menyamping (sympodial), tergantung marganya.
    Daun anggrek biasanya oval memanjang dengan tulang daun memanjang pula, khas daun monokotil. Daun dapat pula menebal dan berfungsi sebagai penyimpn air.
    Bunga anggrek berbentuk khas dan menjadi penciri yang membedakannya dari anggota suku lain. Bunga-bunga anggrek tersusun majemuk, muncul dari tangkai bunga yang memanjang, muncul dari ketiak daun. Bunganya simetri bilateral. Helaian kelopak bunga (sepal) biasanya berwarna mirip dengan mahkota bunga (petal), sehingga keduanya disebut sebagai tepal). Satu helai mahkota bunga termodifikasi membentuk semacam "lidah" yang melindungi suatu struktur aksesoris yang membawa benang sari dan putik. Benang sari memiliki tangkai sangat pendek dengan dua kepala sari berbentuk cakram kecil (disebut "pollinia") dan terlindung oleh struktur kecil yang harus dibuka oleh serangga penyerbuk (atau manusia untuk vanili) dan membawa serbuk sari ke mulut putik. Tanpa bantuan organisme penyerbuk, tidak akan terjadi penyerbukan.</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="pengertian_fuchsia">Fuchsia adalah sebuah genus tanaman hias dari keluarga Onagraceae. Tanaman ini berasal dari Amerika Selatan. Terdapat sekitar 100 spesies tanaman yang tergolong dalam genus ini. Ahli tanaman asal Prancis, Charles Plumier adalah yang pertama kali menemukan tanaman ini. Pada tahun 1696, Plumier menemukan tanaman ini tumbuh liar di Pulau Hispaniola, Kepulauan Karibia. Kultivasi tanaman ini kemudian diperkenalkan ke Amerika Utara dan Ke Eropa. Di beberapa tempat, tanaman ini terlepas dari kultivasi dan tumbuh liar. Plumier memberi nama tanaman ini dengan nama Fuchsia untuk menghormati ahli tanaman asal Jerman, Leonhard Fuchs (1501-66).</string>
    <string name="karakteristik_fuchsia">Tinggi dari tanaman ini adalah sekitar 15 hingga 150 cm, dan dapat menyebar selebar 30 hingga 105 cm. Pada daerah dengan iklim sedang, tanaman ini biasa berbunga pada waktu musim semi akhir hingga musim gugur awal. Tanaman ini dapat berbunga selama 12 minggu atau lebih. Sebagai tanaman hias, tanaman dalam golongan ini dinilai relatif sulit untuk dipelihara. Tanaman ini cocok untuk ditanam pada lingkungan yang sejuk dan membutuhkan banyak air.</string>
    <string name="tulip">Tulip</string>
    <string name="pengertian_tulip">Tulip (bahasa Latin: Tulipa) merupakan nama genus untuk 100 spesies tumbuhan berbunga yang termasuk ke dalam keluarga Liliaceae. Tulip berasal dari Asia Tengah, tumbuh liar di kawasan pegunungan Pamir dan pegunungan Hindu Kush dan stepa di Kazakhstan. Negeri Belanda terkenal sebagai negeri bunga tulip. Tulip juga merupakan bunga nasional Iran dan Turki.</string>
    <string name="karakteristik_tulip">Tulip merupakan tumbuhan tahunan berumbi yang tingginya antara 10–70 cm, daunnya berlilin, berbentuk sempit memanjang berwarna hijau nuansa kebiru-biruan, dan bunganya berukuran besar terdiri 6 helai daun mahkota. Tulip hasil persilangan menghasilkan bunga berwarna tunggal, merah, oranye, kuning, hijau, biru, ungu, atau berbagai macam kombinasi dan gradasi warna. Tulip menghasilkan biji-biji berbentuk bundar pipih yang dibungkus kapsul kering.</string>
    <string name="alamanda">Alamanda</string>
    <string name="pengertian_alamanda">Alamanda atau allamanda (Allamanda cathartica) adalah tanaman hias yang umum disebut sebagai bunga alamanda dan juga sering disebut sebagai bunga terompet emas, bunga lonceng kuning, atau bunga buttercup. Bunga alamanda berasal dari daerah Amerika Tengah dan Selatan dan banyak ditemukan di Brasil di mana bunga ini umum digunakan sebagai hiasan karena bentuknya yang indah.</string>
</resources>